<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
   android:padding="16dp"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".Sign_in">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#071D36"
        android:textStyle="bold"
        android:layout_marginLeft="36dp"
        android:paddingRight="38dp"
        android:layout_marginTop="120dp"
        android:textSize="32sp"
        android:text="@string/s" />


    <TextView
        android:id="@+id/textViewsignin2"
        android:layout_width="wrap_content"
        android:layout_below="@id/textView3"
        android:textColor="#767676"
        android:layout_marginLeft="36dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/end" />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:ems="20"
        android:hint="@string/e"
        android:textColor="#575757"
        android:textColorHint="#85000000"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="37dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="36dp"
        android:layout_below="@id/editTextTextEmailAddress4"
        android:ems="10"
        android:hint="@string/pass"
        android:textColorHint="#85000000"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextPassword"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="51dp"
        android:layout_marginRight="37dp"
        android:background="#2C8AF8"
        android:onClick="btn_raw"
        android:text="@string/sign"
        android:textAllCaps="false"
        android:elevation="10dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_sign_in"
        android:layout_marginTop="24dp"
        android:paddingLeft="35dp"
        android:text="@string/reset"
        android:textColor="#55595D"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        android:paddingRight="35dp"
        android:id="@+id/sign_in"
        android:textColor="#55595D"
        android:layout_below="@id/button_sign_in"
        android:layout_alignParentRight="true"
        android:text="@string/sig"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parte"
        android:id="@+id/textView14"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_in"
        android:textColor="#312E2E"
        android:textSize="14sp" />
</RelativeLayout>