<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="55dp"
        android:layout_height="17dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="277dp"
        android:background="@drawable/bound_rounded"
        android:text="@string/ver"
        android:textColor="#2C8AF8"
        android:gravity="center_horizontal"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="43dp"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="122dp"
        android:text="@string/name"
        android:textColor="#2C8AF8"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="36dp">



        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/blue"
            android:drawablePadding="15dp"
              android:text="@string/connect"
            android:textColor="#071D36"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/you"
            android:textColor="#767676" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:paddingLeft="36dp">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/man"
            android:text="@string/broad"
            android:textColor="#071D36"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/notify"
            android:textColor="#767676" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:paddingLeft="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:drawableLeft="@drawable/cap"
            android:text="@string/flutter"
            android:textColor="#071D36"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/run"
            android:textColor="#767676" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="37dp"
        android:background="#2C8AF8"
        android:onClick="btn_sign_in"
        android:text="@string/sign"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="129dp"
        android:background="@drawable/my_button"
        android:onClick="btn_sign_up"
        android:text="@string/up"
        android:textAllCaps="false"
        android:textColor="#2C8AF8"
        android:textSize="20sp" />

</LinearLayout>
